# osucli

./: README.md  pyproject.toml
osucli/: __init__.py  cli.py  path.py
osucli/core/: beatmap.py  cfg.py  cfg_key.py  error.py  osu_manager.py  skin.py  zipper.py
