[tool.poetry]
name = "osucli"
version = "0.1.0"
description = "osu command tools"
authors = ["vegchic <h_foryou@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
typer-cli = "^0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
